osso-af-startup (1.4-1) unstable; urgency=low

  * UNRELEASED
  * Removed the sleep after startup greeting.

 -- Kimmo Hämäläinen <kimmo.hamalainen@nokia.com>  Mon, 20 Feb 2006 18:40:28 +0200

osso-af-startup (1.3-1) unstable; urgency=low

  * Fixed dbus-sessionbus.sh to use dsmetool.
  * Fixed the first-boot restarting script (N#23037).
  * Appended user name to DBus address file for multi-user Scratchbox.
  * Added LAUNCHWRAPPER_NICE_KILL that is indentical to ..._NICE
    except that it uses the KILL signal when stopping.

 -- Kimmo Hämäläinen <kimmo.hamalainen@nokia.com>  Fri, 17 Feb 2006 17:41:30 +0200

osso-af-startup (1.2-1) unstable; urgency=low

  * ke-recv is not started anymore, it is now under init.
  * Removed temp-reaper.sh because the C program is now used.
  * Removed dependency to lsof.
  * Removed empty 'startup' directory.

 -- Kimmo Hämäläinen <kimmo.hamalainen@nokia.com>  Thu, 26 Jan 2006 11:19:52 +0200

osso-af-startup (1.1-1) unstable; urgency=low

  * LANGUAGE is now unset in the default 'locale' file (bug 21780).

 -- Kimmo Hämäläinen <kimmo.hamalainen@nokia.com>  Mon, 09 Jan 2006 09:46:35 +0200

osso-af-startup (1.0-1) unstable; urgency=low

  * Modifications for new DBus.
  * AF environment is now included to every shell in /etc/profile.
  * D-BUS session bus now uses an abstract socket and dynamic address.

 -- Kimmo Hämäläinen <kimmo.hamalainen@nokia.com>  Fri, 25 Nov 2005 13:12:50 +0200

osso-af-startup (0.70-1) unstable; urgency=low

  * Added creation and deletion of im_disable_tools_menu to real-af-startup
    (bug 21348).

 -- Kimmo Hämäläinen <kimmo.hamalainen@nokia.com>  Thu, 17 Nov 2005 14:31:26 +0200

osso-af-startup (0.69-2) unstable; urgency=low

  * Set execute property for get-devlock.sh in postinst script (bug 21278).

 -- Kimmo Hämäläinen <kimmo.hamalainen@nokia.com>  Mon, 14 Nov 2005 13:20:56 +0200

osso-af-startup (0.69-1) unstable; urgency=low

  * Set execute property for get-devlock.sh (bug 21278).