@@ -2,8 +2,9 @@ osso-af-startup (1.4-1) unstable; urgency=low
 
   * UNRELEASED
   * Removed the sleep after startup greeting.
+  * Now using whoami in af-defines.sh, and removed a needless warning.
 
- -- Kimmo Hämäläinen <kimmo.hamalainen@nokia.com>  Mon, 20 Feb 2006 18:40:28 +0200
+ -- Kimmo Hämäläinen <kimmo.hamalainen@nokia.com>  Thu, 23 Feb 2006 09:42:39 +0200
 
 osso-af-startup (1.3-1) unstable; urgency=low
 
